--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       border: 2px solid #8b5e3c;
     }
   </style>
-<script defer src="/CS5850-Building-Game-Engines/bundle.js"></script></head>
+</head>
 <body>
   <div id="game-container"></div>
-  <script src="dist/bundle.js"></script> <!-- Webpack 构建输出 -->
-</body>
+  <!-- Webpack will inject the correct bundle.js script automatically -->
+<script defer src="/CS5850-Building-Game-Engines/bundle.js"></script></body>
 </html>
